--- a/ms/invasibility-ms.Rmd
+++ b/ms/invasibility-ms.Rmd
@@ -1,23 +1,13 @@
 ---
 title: 'Alien conifer spread in Norway'
 author:
-  - Julien Vollering:
-      email: julienvollering@gmail.com
-      institute: [IMN, NHM]
-      correspondence: true
-  - name: Et Al
-    institute: NHM
-institute:
-  - IMN: Department of Environmental Sciences, Western Norway University of Applied Sciences, Sogndal, Norway
-  - NHM: Department of Research and Collections, Natural History Museum, University of Oslo, Oslo, Norway
+- Julien Vollering^[julienvollering@gmail.com]
+- et al.
 bibliography: invasibility-ms.bib
 output: 
   bookdown::html_document2:
     toc: true
     toc_float: true
-    pandoc_args:
-      - '--lua-filter=lua-filters/scholarly-metadata.lua'
-      - '--lua-filter=lua-filters/author-info-blocks.lua'
 always_allow_html: true
 editor_options:
   chunk_output_type: console
